# hope

./: .envexample  .gitignore  README.md  app_request.py  example.keywords  logging.conf  pyproject.toml
data/: sample_nodes.csv
notebooks/: data.ipynb  explore.ipynb
src/hope/: __init__.py  cli.py
src/hope/graph/: README.md  links.py  package-lock.json  package.json
src/hope/graph/config/: webpack.common.js
src/hope/graph/public/: 2023Elections_subsample_edges.csv  2023Elections_subsample_nodes.csv
src/hope/graph/src/: index.js  template.html
src/hope/graph/src/js/: example.js
src/hope/graph/src/styles/: _custom_bootstrap.scss  _scaffolding.scss  _variables.scss  index.scss
src/hope/ml/: __main__.py  app.py  explain.py  model_utils.py  serve.py
src/hope/ml/api/: configuration.py  factory.py  item.py
src/hope/ml/api/routers/: classification.py  utils.py
src/hope/twitter/: database.py  graph.py  item.py  listener.py  neo_item.py  stream.py
src/hope/viz/: index.html
src/twitter/: database.py  graph.py  listener.py  stream.py
src/utils.py/: mongo_to_neo4j.py
