[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hope"
description = "Understanding trends behind Nigeria's 2023 Elections"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
  'tweepy==4.12.1',
  'jsonlines==3.0.0',
  'python-dotenv==0.17.1',
  'pymongo==4.3.2',
  'neomodel==4.0.8',
  'shap==0.41.0',
  'torch==1.13.1',
  'uvicorn==0.21.1',
  'fastapi==0.95.0',
  'python-json-logger==2.0.7'
]

dynamic = [
  "version",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
license = { text = "Apache-2.0" }

[project.optional-dependencies]
dev = [
    'ipykernel==6.21.1',
]
[project.urls]
Homepage = "https://github.com/theyorubayesian/hope"

[project.scripts]
hope = "hope.cli:main"